Hide things behind a debug property

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -8,7 +8,7 @@
 </menu>
 
 <h2>components/ember-youtube</h2>
-{{ember-youtube ytid=youTubeId name=player playing="ytPlaying" paused="ytPaused" ended="ytEnded"}}
+{{ember-youtube ytid=youTubeId debug=true name=player playing="ytPlaying" paused="ytPaused" ended="ytEnded"}}
 
 {{!-- ready="ytReady"
 buffering="ytBuffering"
