Fix undefined values for the <progress> element

--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -15,7 +15,7 @@
 
 {{#if showProgress}}
 	<p class="EmberYoutube-progress">
-		<progress {{bind-attr value=currentTime max=duration}}></progress>
+		<progress {{bind-attr value=currentTimeValue max=durationValue}}></progress>
 	</p>
 {{/if}}
 
