--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -17,6 +17,7 @@
 	showControls=true
 	showTime=true
 	showProgress=true
+	autoplay=true
 	playing="ytPlaying"
 	paused="ytPaused"
 	ended="ytEnded"}}
