--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,6 +1,8 @@
 <p>You can control the component directly from the controller by target the component in your actions. Try changing the YouTube ID or tap the buttons below.</p>
 
 <p>{{input value=youTubeId}}</p>
+<p>Volume : {{input value=volume}}</p>
+
 <menu>
 	<button {{action "togglePlay" target="myPlayer"}}>
 		{{#if myPlayer.isPlaying}}Pause{{else}}Play{{/if}}
@@ -12,6 +14,7 @@
 
 <h2>components/ember-youtube</h2>
 {{ember-youtube ytid=youTubeId
+	volume=volume
 	name=myPlayer
 	debug=false
 	showControls=true
