--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,27 @@
 <h2 id="title">Welcome to Ember.js</h2>
 
-{{outlet}}
+<p>You can control the component directly from the controller by target the component in your actions. Try changing the YouTube ID or tap the buttons below.</p>
+
+<p>{{input value=youTubeId}}</p>
+<menu>
+	<button {{action "togglePlay" target="myPlayer"}}>
+		{{#if myPlayer.isPlaying}}Pause{{else}}Play{{/if}}
+	</button>
+	<button {{action "toggleVolume" target="myPlayer"}}>
+		{{#if myPlayer.isMuted}}Unmute{{else}}Mute{{/if}}
+	</button>
+</menu>
+
+<h2>components/ember-youtube</h2>
+{{ember-youtube ytid=youTubeId
+	name=myPlayer
+	debug=false
+	showControls=true
+	showTime=true
+	showProgress=true
+	autoplay=true
+	playing="ytPlaying"
+	paused="ytPaused"
+	ended="ytEnded"}}
+
+	{{outlet}}
