--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -16,7 +16,7 @@
 
 	{{#if showProgress}}
 		<p class="EmberYoutube-progress">
-			<progress {{bind-attr value=currentTimeValue max=durationValue}}></progress>
+			<progress value={{currentTimeValue}} max={{durationValue}}></progress>
 		</p>
 	{{/if}}
 
