--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -1,3 +1,12 @@
-html, body {
-  margin: 20px;
+html {
+	font-family: Georgia;
+}
+body {
+	margin: 2rem;
+}
+
+section {
+	display: block;
+	padding: 1rem;
+	margin-bottom: 1rem;
 }
