--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -22,12 +22,14 @@
 	{{/if}}
 
 	{{#if showDebug}}
-		<p class="EmberYoutube-debug"><code>
-			ytid: {{ytid}}<br>
-			state: {{playerState}}<br>
-			isMuted: {{isMuted}}<br>
-			isPlaying: {{isPlaying}}<br>
-		</code></p>
+		<p class="EmberYoutube-debug">
+			<code>
+				ytid: {{ytid}}<br>
+				playerState: {{playerState}}<br>
+				isMuted: {{isMuted}}<br>
+				isPlaying: {{isPlaying}}<br>
+			</code>
+		</p>
 	{{/if}}
 </div>
 
