--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,8 +1,6 @@
 <h1>Ember YouTube</h1>
-
 <p><strong>This is a demonstration of the ember-youtube component.</strong></p>
-
-<p>You'll see that it's possible to control the player with custom controls. See the <a href="https://github.com/oskarrough/ember-youtube">repository</a> for more information.</p>
+<p>You'll see that it's possible to control the player with custom controls.<br>See the <a href="https://github.com/oskarrough/ember-youtube">repository</a> for more information.</p>
 
 <hr>
 
@@ -10,7 +8,7 @@
 
 <section>
 	YouTube ID: {{input value=youTubeId}}<br>
-Volume: {{input value=volume}}
+	Volume: {{input value=volume}}
 </section>
 
 <p>You can play, pause, mute and unmute the component from the surrounding controller:</p>
