Update formatting again

--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -28,6 +28,7 @@
 				playerState: {{playerState}}<br>
 				isMuted: {{isMuted}}<br>
 				isPlaying: {{isPlaying}}<br>
+				volume: {{volume}}<br>
 			</code>
 		</p>
 	{{/if}}
