--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -4,9 +4,13 @@ html {
 body {
 	margin: 2rem;
 }
-
 section {
 	display: block;
 	padding: 1rem;
 	margin-bottom: 1rem;
+}
+
+#EmberYoutube-player {
+	width: 480px;
+	max-width: 100%;
 }
