Replace custom YouTube playerVars with the defaults
This change means that to control autoplay, you will have to pass it through `playerVars`.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -32,8 +32,8 @@
 <section>
 	<h3>The player</h3>
 	{{ember-youtube ytid=youTubeId
-	autoplay=false
 	volume=volume
+		playerVars=customPlayerVars
 
 	showControls=false
 	showProgress=true
