--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -30,7 +30,8 @@
 
 <section>
 	<h3>The player</h3>
-	{{ember-youtube ytid=youTubeId
+	{{ember-youtube
+		ytid=youTubeId
 		volume=volume
 		playerVars=customPlayerVars
 
