--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -24,6 +24,7 @@
 					isPlaying: {{isPlaying}}<br>
 					currentTime: {{currentTime}}<br>
 					duration: {{duration}}<br>
+					volume: {{volume}}<br>
 				</code>
 			</p>
 		{{/if}}
