Attempt to fix async test for loading iframe

--- a/app/templates/components/ember-youtube.hbs
+++ b/app/templates/components/ember-youtube.hbs
@@ -1,4 +1,4 @@
-<div id="EmberYoutube-player"></div>
+<div class="EmberYoutube-player"></div>
 
 {{#if showExtras}}
 	<div class="EmberYoutube-extras">
