--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,9 @@
-<h1>{{link-to "Ember Youtube" "application"}}</h1>
-<p><strong>This is a demonstration of the ember-youtube component.</strong></p>
-<p>You'll see that it's possible to control the player with custom controls.<br>See the <a href="https://github.com/oskarrough/ember-youtube">repository</a> for more information.</p>
+<p><strong>Demonstration of the ember-youtube component</strong>. See the <a href="https://github.com/oskarrough/ember-youtube">repository</a> for more information.</p>
+
+<nav>
+	{{link-to "test 1" "index"}}
+	{{link-to "test 2" "video" "jmCytJPqQis"}}
+</nav>
 
 <hr>
 
